console/commands/ert.txt
com_archive.cc:110:46: error: Using object to temporary. [danglingTemporaryLifetime]
  global_retc = output_result(client_command(in));
                                             ^
com_archive.cc:109:18: note: Pointer to container is created here.
  in = in_cmd.str().c_str();
                 ^
com_archive.cc:110:46: note: Using object to temporary.
  global_retc = output_result(client_command(in));
                                             ^
com_backup.cc:131:46: error: Using object to temporary. [danglingTemporaryLifetime]
  global_retc = output_result(client_command(in, true));
                                             ^
com_backup.cc:130:18: note: Pointer to container is created here.
  in = in_cmd.str().c_str();
                 ^
com_backup.cc:131:46: note: Using object to temporary.
  global_retc = output_result(client_command(in, true));
                                             ^
